tests/neg-custom-args/captures/i23303.check
-- Error: tests/neg-custom-args/captures/i23303.scala:6:36 -------------------------------------------------------------
6 |    def execute: Unit = ops.foreach(f => f()) // error
  |                                    ^^^^^^^^
  |                                 Local reach capability Runner.this.ops* leaks into capture scope of class Runner.
  |                                 To allow this, the value ops should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/i23303.scala:9:22 -------------------------------------------------------------
9 |    () => ops.foreach(f => f()) // error
  |                      ^^^^^^^^
  |                      Local reach capability ops* leaks into capture scope of method Runner2.
  |                      To allow this, the parameter ops should be declared with a @use annotation
